fix manifest file, fix max-width on smaller viewports, add website description

--- a/src/App.css
+++ b/src/App.css
@@ -357,7 +357,7 @@ a:hover {
     align-items: center;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 390px) {
     .navbar {
         width: 100%;
         justify-content: space-between;
